--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
-    "nodemon": "^2.0.22"
+    "mysql2": "^3.2.4",
+    "nodemon": "^2.0.22",
+    "sequelize": "^6.31.1"
   }
 }
