--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "mysql2": "^3.2.4",
     "nodemon": "^2.0.22",
     "sequelize": "^6.31.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.39.0",
+    "eslint-plugin-react": "^7.32.2"
   }
 }
